test-files/expected/typeParameters.errors
typeParameters:8:7: error: expected argument of type Def(#2), but got Def(#8)
   8 | apply(function (i: number) { return i }, 5)
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
typeParameters:1:47: error: could not resolve "T" as Type
   1 | var apply = function <T,U>(f: (x: T) => U, x: T): U { return f(x) }
     |                                               ^
typeParameters:9:7: error: expected argument of type Def(#2), but got Def(#9)
   9 | apply(function (s: string) { return s }, "a")
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
typeParameters:1:47: error: could not resolve "T" as Type
   1 | var apply = function <T,U>(f: (x: T) => U, x: T): U { return f(x) }
     |                                               ^
